clusters/talos-cluster/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  namespace: nextcloud
  labels:
    app: nextcloud-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: nextcloud-deployment
  template:
    metadata:
      name: nextcloud-deployment
      labels:
        app: nextcloud-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud
          image: nextcloud:stable
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-data
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /status.php
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /status.php
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
