clusters/talos-cluster/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-deployment
  ports:
    - name: nextcloud
      protocol: TCP
      port: 80
      targetPort: 443
