clusters/talos-cluster/nextcloud/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "nextcloud.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-service
          port: 80
